--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   height:100vh;
   width:100vw;
   font-size:8vw;
-  text-align:justify;
+
   line-height:8vh;
   background-color:#C8E7FF;
   font-family: 'Rubik', sans-serif;
@@ -62,6 +62,11 @@ header{
   background-size:cover;
   background-repeat:no-repeat;
 }
+
+header p{
+    text-align:justify;
+    } 
+
 h1, h2{
   color:#4EA8DE;
 }
