--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   height:100vh;
   width:100vw;
   font-size:8vw;
-
+  margin-left:15vw;
   line-height:8vh;
   background-color:#C8E7FF;
   font-family: 'Rubik', sans-serif;
