--- a/style.css
+++ b/style.css
@@ -103,9 +103,7 @@ h1, h2{
 #project img{
   width:92vw;
   height:40vh;
- 
-  
-  
+  margin-left:30vw;
 }
 #project .w-image{
   background-color:#CAF0F8;
